--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <div id="root"><h1>Hi jasnaS</h1></div>
+    
+  
 
-<script src="./App.js">
+<script type ="module" src="./App.js">
 
     
 </script>
